--- a/CChatAdminSmartGWT/war/CChatAdminSmartGWT.css
+++ b/CChatAdminSmartGWT/war/CChatAdminSmartGWT.css
@@ -1,24 +1,81 @@
-/** CChat application. */
-
-h1 {
-  font-size: 2em;
-  font-weight: bold;
-  color: #777777;
-  margin: 40px 0px 70px;
-  text-align: center;
-}
-
-.application_title {
-	font-family: Arial, Verdana, tahoma, serif;
-    color: #454545;
-    font-size: 20px;
-}
-
-.interactImageHover {
-    font-family: Verdana, Bitstream Vera Sans, sans-serif;
+.inboundMsgGridRecord,
+.inboundMsgGridRecordDark {
     font-size: 11px;
-    border: 1px solid #808080;
-    padding: 5px;
-    background-color: #b8d0ff;
     color: black;
+    border-bottom: 1px solid;
+    border-bottom-color: #ededed;
+    background-color: #90ee90;
+}
+.inboundMsgGridRecordOver,
+.inboundMsgGridRecordOverDark {
+    font-size: 11px;
+    color: black;
+    border-bottom: 1px solid;
+    border-bottom-color: #ededed;
+    background-color: #cccccc;
+}
+.inboundMsgGridRecordSelected,
+.inboundMsgGridRecordSelectedDark {
+    font-size: 11px;
+    color: black;
+    border-bottom: 1px solid;
+    border-bottom-color: #ededed;
+    background-color: #d9e4f6;
+}
+.inboundMsgGridRecordSelectedOver,
+.inboundMsgGridRecordSelectedOverDark {
+    font-size: 11px;
+    color: black;
+    border-bottom: 1px solid;
+    border-bottom-color: #ededed;
+    background-color: #d0dff6;
+}
+.inboundMsgGridRecordDisabled,
+.inboundMsgGridRecordDisabledDark {
+    font-size: 11px;
+    color:#aaaaaa;
+    border-bottom: 1px solid;
+    border-bottom-color: #ededed;
+	background-color:#ffffff;
+}
+
+.outboundMsgGridRecord,
+.outboundMsgGridRecordDark {
+    font-size: 11px;
+    color: black;
+    border-bottom: 1px solid;
+    border-bottom-color: #ededed;
+    background-color: #fafafa;
+}
+.outboundMsgGridRecordOver,
+.outboundMsgGridRecordOverDark {
+    font-size: 11px;
+    color: black;
+    border-bottom: 1px solid;
+    border-bottom-color: #ededed;
+    background-color: #cccccc;
+}
+.outboundMsgGridRecordSelected,
+.outboundMsgGridRecordSelectedDark {
+	font-size: 11px;
+    color: black;
+    border-bottom: 1px solid;
+    border-bottom-color: #ededed;
+    background-color: #d9e4f6;
+}
+.outboundMsgGridRecordSelectedOver,
+.outboundMsgGridRecordSelectedOverDark {
+    font-size: 11px;
+    color: black;
+    border-bottom: 1px solid;
+    border-bottom-color: #ededed;
+    background-color: #d0dff6;
+}
+.outboundMsgGridRecordDisabled,
+.outboundMsgGridRecordDisabledDark {
+    font-size: 11px;
+    color:#aaaaaa;
+	border-bottom: 1px solid;
+    border-bottom-color: #ededed;
+	background-color:#ffffff;
 }
