--- a/CChat/WebContent/style/style.css
+++ b/CChat/WebContent/style/style.css
@@ -14,15 +14,6 @@ h1 {
     font-size: 20px;
 }
 
-.interactImageHover {
-    font-family: Verdana, Bitstream Vera Sans, sans-serif;
-    font-size: 11px;
-    border: 1px solid #808080;
-    padding: 5px;
-    background-color: #b8d0ff;
-    color: black;
-}
-
 .copyright {
 	padding-top: 10px;
 	font-size: 9px;
@@ -51,6 +42,16 @@ h1 {
 	
 
 /* SmartGWT admin css */
+
+.interactImageHover {
+	text-align: center;
+    font-family: Verdana, Bitstream Vera Sans, sans-serif;
+    font-size: 11px;
+    border: 1px solid #808080;
+    padding: 5px;
+    background-color: #b8d0ff;
+    color: black;
+}
 
 .inboundMsgGridRecord,
 .inboundMsgGridRecordDark {
